--- a/css/main.css
+++ b/css/main.css
@@ -1,17 +1,3 @@
-
-    body {
-    background: #ffffff;
-    margin: 0px;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 26px;
-    color: #666;
-    }
-
-    .clear {
-    clear: both;
-    }
-
     .wrapper {
     margin: 20px auto;
     border-radius: 10px;
@@ -31,11 +17,6 @@
     border-left: 1px solid #CCCCCC;
     }
 
-    .top {
-    background: #ED6B16;
-    padding: none;
-    }
-
     .inBody {
     padding: 20px;
     background: #e4e4e4;
@@ -48,5 +29,83 @@
     font-weight: 700;
     color: #000;
     }
+    
+    .button {
+    font: bold 11px Arial;
+    text-decoration: none;
+    background-color: #EEEEEE;
+    color: #333333;
+    padding: 3px 8px 3px 8px;
+    border-top: 1px solid #CCCCCC;
+    border-right: 1px solid #333333;
+    border-bottom: 1px solid #333333;
+    border-left: 1px solid #CCCCCC;
+    }
 
-  
+    .pageTitle {
+    font-size: 24px;
+    line-height: 40px;
+    font-weight: 700;
+    color: #000;
+    }
+
+    body {
+	background: #fafafa;
+	color: #444;
+	font: 100%/30px 'Helvetica Neue', helvetica, arial, sans-serif;
+	text-shadow: 0 1px 0 #fff;
+    }
+
+    strong {
+    font-weight: bold; 
+    }
+
+    em {
+    font-style: italic; 
+    }
+
+    table {
+    background: #f5f5f5;
+    border-collapse: separate;
+    box-shadow: inset 0 1px 0 #fff;
+    font-size: 12px;
+    line-height: 24px;
+    margin: 30px auto;
+    margin-bottom: 10px;
+    text-align: left;
+    width: auto;
+    }
+    
+    .table_wrap a{
+    font: bold 11px Arial;
+    text-decoration: none;
+    background-color: #EEEEEE;
+    color: #333333;
+    padding: 3px 8px 3px 8px;
+    border-top: 1px solid #CCCCCC;
+    border-right: 1px solid #333333;
+    border-bottom: 1px solid #333333;
+    border-left: 1px solid #CCCCCC;
+    }
+
+    th {
+    background: url(http://jackrugile.com/images/misc/noise-diagonal.png), linear-gradient(#777, #444);
+    border-left: 1px solid #555;
+    border-right: 1px solid #777;
+    border-top: 1px solid #555;
+    border-bottom: 1px solid #333;
+    box-shadow: inset 0 1px 0 #999;
+    color: #fff;
+    font-weight: bold;
+    padding: 10px 15px;
+    text-shadow: 0 1px 0 #000;	
+    }
+
+    td {
+    border-right: 1px solid #fff;
+    border-left: 1px solid #e8e8e8;
+    border-top: 1px solid #fff;
+    border-bottom: 1px solid #e8e8e8;
+    padding: 10px 15px;
+    transition: all 300ms;
+    }
