--- a/css/main.css
+++ b/css/main.css
@@ -23,13 +23,22 @@
     border-radius: 0 0 10px 10px;
     }
 
+    .main_content{
+      margin: 20px;
+      padding: 20px;
+      width: 80%;
+      text-align: left;
+      background-color:#d8d8d8;
+      border-radius: 10px 10px 10px 10px;
+    }
+
     .pageTitle {
     font-size: 24px;
     line-height: 40px;
     font-weight: 700;
     color: #000;
     }
-    
+
     .button {
     font: bold 11px Arial;
     text-decoration: none;
@@ -50,18 +59,18 @@
     }
 
     body {
-	background: #fafafa;
-	color: #444;
+	background: #B8B8B8;
+	color: #000000;
 	font: 100%/30px 'Helvetica Neue', helvetica, arial, sans-serif;
-	text-shadow: 0 1px 0 #fff;
+	//text-shadow: 0 1px 0 #fff;
     }
 
     strong {
-    font-weight: bold; 
+    font-weight: bold;
     }
 
     em {
-    font-style: italic; 
+    font-style: italic;
     }
 
     table {
@@ -75,11 +84,15 @@
     text-align: left;
     width: auto;
     }
-    
+
     .main_wrap table {
     width: 90%;
     }
-    
+
+  table.main_exception{
+      width: auto;
+    }
+
     .main_wrap a{
     font: bold 11px Arial;
     text-decoration: none;
@@ -102,7 +115,7 @@
     color: #fff;
     font-weight: bold;
     padding: 10px 15px;
-    text-shadow: 0 1px 0 #000;	
+    text-shadow: 0 1px 0 #000;
     }
 
     td {
@@ -112,4 +125,8 @@
     border-bottom: 1px solid #e8e8e8;
     padding: 10px 15px;
     transition: all 300ms;
+    }
+
+    input , textarea{
+      width: 100%;
     }
